examples/15.istio-on-gke/egress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: google
spec:
  hosts:
    - www.google.com
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: google
spec:
  hosts:
    - www.google.com
  tls:
    - match:
        - port: 443
          sni_hosts:
            - www.google.com
      route:
        - destination:
            host: www.google.com
            port:
              number: 443
          weight: 100
